--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Prerequisites
 *.d
-
+.idea
 # Object files
 *.o
 *.ko
@@ -11,7 +11,6 @@
 *.ilk
 *.map
 *.exp
-*.exe
 
 # Precompiled Headers
 *.gch
